--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
 * {
     margin: 0;
@@ -14,9 +14,9 @@
 /* TERCIARIA: Indigo Dye - #00416a */
 
 body {
+    height: 100vh;
     background-color: #111111;
     color: #fffafa;
-    height: 100vh;
 }
 
 .titulo-destaque {
@@ -38,10 +38,36 @@ body {
     font-size: 36px;
     font-family: 'Krona One', sans-serif;
     line-height: 56px;
+    font-weight: 400;
 }
 
 .apresentacao__conteudo__texto {
     font-size: 24px;
     font-family: 'Montserrat', sans-serif;
     line-height: 36px;
+    font-weight: 400;
+}
+
+.apresentacao__links {
+    display: flex;
+    justify-content: space-between;
+}
+
+.apresentacao__links__link {
+    /* DIMENSÃO */
+    width: 280px;
+    padding: 21.5px 0;
+    text-align: center;
+    border-radius: 16px;
+
+    /* TEXTO */
+    font-size: 24px;
+    color: #111111;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    line-height: 36px;
+    text-decoration: none;
+
+    /* FUNDO */
+    background-color: #007FFF;
 }
