--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
     font-family: 'Krona One', sans-serif;
     line-height: 56px;
     font-weight: 400;
+    color: #fffafa;
 }
 
 .apresentacao__conteudo__texto {
@@ -49,6 +50,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     line-height: 36px;
     font-weight: 400;
+    color: #fffafa;
 }
 
 .apresentacao__links {
@@ -59,21 +61,33 @@ body {
     gap: 32px;
 }
 
+.apresentacao__links__subtitulo {
+    font-family: 'Krona One', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 40px;
+    color: #fffafa;
+
+}
+
 .apresentacao__links__link {
     /* DIMENSÃO */
-    width: 280px;
-    padding: 21.5px 0;
+    width: 378px;
+    padding: 16px 0;
     text-align: center;
-    border-radius: 16px;
-
+    
     /* TEXTO */
     font-size: 24px;
-    color: #111111;
+    color: #fffafa;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     line-height: 36px;
     text-decoration: none;
+    
+    /* BORDA */
+    border: 2px solid #007FFF;
+    border-radius: 8px;
 
     /* FUNDO */
-    background-color: #007FFF;
+    /* background-color: #007FFF; */
 }
