Atualizando hover e focus de links para estar igual ao figma.

--- a/style.css
+++ b/style.css
@@ -99,5 +99,5 @@ body {
 }
 
 .apresentacao__links__link:hover, .apresentacao__links__link:focus {
-    background-color: #0080ff41;
+    background-color: #272727;
 }
