Removendo 100vh + ransformando margin de apresentação em padding + adcionando estilização de rodapé.

--- a/style/_apresentacao.css
+++ b/style/_apresentacao.css
@@ -4,7 +4,7 @@
 /** APRESENTAÇÃO / MAIN */
 
 .apresentacao {
-    margin: 6% 10%;
+    padding: 6% 10%;
     display: flex;
     justify-content: space-between;
 }
