--- a/style/_rodape.css
+++ b/style/_rodape.css
@@ -1,7 +1,4 @@
-/** IMPORTANDO FONTES */
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
-
-
+/** RODAPÉ */
 .rodape {
     /* TEXTO */
     font-family: 'Montserrat', sans-serif;
