--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,8 @@
+/** IMPORTANDO FONTES */
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
+
 @import './_reset.css';
 @import './_base.css';
+@import './_cabecalho.css';
 @import './_apresentacao.css';
-@import './_rodape.css'
+@import './_rodape.css';
