--- a/style/style.css
+++ b/style/style.css
@@ -5,4 +5,5 @@
 @import './_base.css';
 @import './_cabecalho.css';
 @import './_apresentacao.css';
+@import './_assets.css';
 @import './_rodape.css';
