--- a/style/_cabecalho.css
+++ b/style/_cabecalho.css
@@ -12,7 +12,7 @@
     font-weight: 600;
     font-size: 24px;
     line-height: 29px;
-    color: #007fff;
+    color: var(--cor-primaria);
     text-decoration: none;
 
     transition: 
@@ -23,6 +23,6 @@
 
 .cabecalho__menu__link:hover, 
 .cabecalho__menu__link:focus {
-    text-shadow: 0 5px 5px rgba(0, 128, 255, 0.5);
+    text-shadow: 0 5px 5px var(--cor-secundaria);
     text-decoration: underline;
 }
