--- a/style/_apresentacao.css
+++ b/style/_apresentacao.css
@@ -14,14 +14,14 @@
 
 .apresentacao__conteudo__titulo {
     font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-primaria);
     line-height: 56px;
     font-weight: 400;
 }
 
 .apresentacao__conteudo__texto {
     font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria);
     line-height: 36px;
     font-weight: 400;
 }
@@ -59,7 +59,7 @@
 }
 
 .apresentacao__links__subtitulo {
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-primaria);
     font-weight: 400;
     font-size: 24px;
     line-height: 40px;
@@ -80,7 +80,7 @@
     /* TEXTO */
     font-size: 24px;
     color: var(--branco);
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria);
     font-weight: 600;
     line-height: 36px;
     text-decoration: none;
