--- a/style/_base.css
+++ b/style/_base.css
@@ -1,20 +1,16 @@
 :root {
-    /* BRANCO */
+    /* CORES */
     --branco: #fffafa;
     --cinza-claro: #585757;
-
-    /* PRETO */
     --cinza-escuro: #262626;
     --preto: #111111;
-
-    /* COR PRIMARIA */
     --cor-primaria: #007fff;
-
-    /* COR SECUNDARIA */
     --cor-secundaria: #094988;
-
-    /* COR TERCIARIA */
     --cor-terciaria: #00416a;
+
+    /* FONTES */
+    --fonte-primaria: 'Krona One', sans-serif;
+    --fonte-secundaria: 'Montserrat', sans-serif;
 }
 
 body {
