--- a/style/_cabecalho.css
+++ b/style/_cabecalho.css
@@ -8,7 +8,7 @@
 }
 
 .cabecalho__menu__link {
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria);
     font-weight: 600;
     font-size: 24px;
     line-height: 29px;
