--- a/style/_rodape.css
+++ b/style/_rodape.css
@@ -1,7 +1,7 @@
 /** RODAPÉ */
 .rodape {
     /* TEXTO */
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria);
     font-weight: 100;
     font-size: 24px;
     line-height: 36px;
