--- a/style/_apresentacao.css
+++ b/style/_apresentacao.css
@@ -13,14 +13,14 @@
 }
 
 .apresentacao__conteudo__titulo {
-    font-size: 36px;
+    font-size: var(--size-tit);
     font-family: var(--fonte-primaria);
     line-height: 56px;
     font-weight: 400;
 }
 
 .apresentacao__conteudo__texto {
-    font-size: 24px;
+    font-size: var(--size-text);
     font-family: var(--fonte-secundaria);
     line-height: 36px;
     font-weight: 400;
@@ -49,7 +49,6 @@
 }
 
 /** APRESENTAÇÃO__LINKS */
-
 .apresentacao__links {
     display: flex;
     justify-content: space-between;
@@ -61,7 +60,7 @@
 .apresentacao__links__subtitulo {
     font-family: var(--fonte-primaria);
     font-weight: 400;
-    font-size: 24px;
+    font-size: var(--size-text);
     line-height: 40px;
 
 }
@@ -78,7 +77,7 @@
     text-align: center;
     
     /* TEXTO */
-    font-size: 24px;
+    font-size: var(--size-text);
     color: var(--branco);
     font-family: var(--fonte-secundaria);
     font-weight: 600;
@@ -88,9 +87,6 @@
     /* BORDA */
     border: 2px solid var(--cor-primaria);
     border-radius: 8px;
-
-    /*// FUNDO */
-    /*// background-color: var(--cor-primaria); */
 
     /* TRANSIÇÃO */
     transition: 
@@ -104,7 +100,6 @@
 .apresentacao__links__link:hover, 
 .apresentacao__links__link:focus {
     background-color: var(--cinza-escuro);
-    /*// box-shadow: 0 0 10px #0080ff; */
     text-shadow: 0 2px 2px var(--cinza-claro);
     width: 420px;
 }
@@ -124,5 +119,4 @@
 
 .apresentacao__imagem:hover {
     box-shadow: 0 0 10px var(--cor-primaria);
-    /*// height: 740px; */
 }
