--- a/style/_base.css
+++ b/style/_base.css
@@ -11,6 +11,10 @@
     /* FONTES */
     --fonte-primaria: 'Krona One', sans-serif;
     --fonte-secundaria: 'Montserrat', sans-serif;
+
+    /* TAMANHOS */
+    --size-tit: 2.25rem; /* 36px */
+    --size-text: 1.5rem; /* 24px */
 }
 
 body {
