--- a/style/_cabecalho.css
+++ b/style/_cabecalho.css
@@ -11,7 +11,7 @@
     font-family: var(--fonte-secundaria);
     font-weight: 600;
     font-size: var(--size-text);
-    line-height: 29px;
+    line-height: 1.8rem; /* 29px */
     color: var(--cor-primaria);
     text-decoration: none;
 
